# owlbox-genesis

./: .gitattributes  .gitignore  .prettierignore  .tool-versions  README.md  clean.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/scripts/: check-audit-expirations.sh
.github/workflows/: ci.yml  release.yml
injected/: dark-mode.css  dark-mode.js  gmail-theme.js  notifications.js  shared.js  title-sync.js
scripts/: bump-version.sh
src/: constants.ts  main.tsx  preferences.tsx  usePreferences.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  gmail.json
src-tauri/src/: autostart.rs  badge.rs  build_info.rs  compose.rs  diag.rs  external.rs  gmail_theme.rs  lib.rs  mailto.rs  main.rs  notifications.rs  paths.rs  preferences.rs  reset.rs  settings.rs  shortcuts.rs  theme.rs  title.rs  updater.rs  webview.rs
src/preferences/: AdvancedTab.tsx  AppearanceTab.tsx  GeneralTab.tsx  NotificationsSetupDialog.tsx  UpdateChecker.tsx
tests/: UpdateChecker.test.tsx  title-sync.test.js  usePreferences.test.ts
