[package]
name = "owlbox"
version = "0.1.0"
description = "A minimal native macOS app for Gmail's web client."
authors = ["mgxv"]
edition = "2021"

[lib]
name = "owlbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
regex = "1.12.3"
sentry = "0.48.2"
dirs = "6.0.0"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-store = "2.4.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
